laborations/old-2018-lab1/testsuite/bad/bad103.cc
int main () {
	1 + bool;
}
